feat(api): remove ingredient